solve Kata11 and fix Kata11Test